# access-control-service

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENCE  README.md  docker-compose.yml  justfile  kosmos.code-workspace  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
services/catalog-service/: CLAUDE.md  CONTEXT.md  Dockerfile  justfile  pyproject.toml
services/catalog-service/app/: config.py  main.py
services/catalog-service/app/catalog/application/: dto.py
services/catalog-service/app/catalog/application/use_cases/: create_category.py  create_product.py  create_variant.py  delete_variant.py  get_product.py  list_categories.py  list_products.py  set_product_status.py  update_product.py  update_variant.py
services/catalog-service/app/catalog/domain/: events.py  exceptions.py
services/catalog-service/app/catalog/domain/entities/: category.py  product.py
services/catalog-service/app/catalog/domain/ports/: category_repository.py  product_repository.py  unit_of_work.py
services/catalog-service/app/catalog/infrastructure/: composition.py  unit_of_work.py
services/catalog-service/app/catalog/infrastructure/http/: exception_mapper.py  routes.py  schemas.py
services/catalog-service/app/catalog/infrastructure/orm/: category.py  product.py
services/catalog-service/app/catalog/infrastructure/repositories/: mappers.py  sqlalchemy_category_repository.py  sqlalchemy_product_repository.py
services/catalog-service/app/inventory/application/: dto.py
services/catalog-service/app/inventory/application/use_cases/: get_inventory.py  release_reservation.py  reserve_stock.py  restock.py
services/catalog-service/app/inventory/domain/: events.py  exceptions.py
services/catalog-service/app/inventory/domain/entities/: inventory.py
services/catalog-service/app/inventory/domain/ports/: inventory_repository.py  unit_of_work.py
services/catalog-service/app/inventory/infrastructure/: composition.py  unit_of_work.py
services/catalog-service/app/inventory/infrastructure/http/: exception_mapper.py  routes.py  schemas.py
services/catalog-service/app/inventory/infrastructure/orm/: inventory.py
services/catalog-service/app/inventory/infrastructure/repositories/: mappers.py  sqlalchemy_inventory_repository.py
services/catalog-service/app/shared/infrastructure/db/: base.py  session.py
services/catalog-service/app/shared/infrastructure/events/: pubsub_publisher.py
services/catalog-service/migrations/: env.py
services/catalog-service/migrations/versions/: 934a8cb962c0_initial_schema.py
services/catalog-service/tests/: conftest.py
services/catalog-service/tests/integration/: test_catalog_routes.py
services/catalog-service/tests/unit/catalog/: fakes.py  test_create_product_use_case.py  test_product_entity.py  test_set_product_status_use_case.py
services/catalog-service/tests/unit/inventory/: fakes.py  test_inventory_entity.py  test_reserve_stock_use_case.py
services/notification-service/: pyproject.toml
(+236 files in other folders)
